--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="//code.highcharts.com/highcharts-more.js"></script>
   <script src="//code.highcharts.com/modules/accessibility.js"></script>
   <script type="text/javascript" src="collegePayoff-forWeb.js"></script>
+  <script type="text/javascript" src="age-forWeb.js"></script>
   <script type="text/javascript" src="cp.js"></script>
 </head>
 
@@ -24,6 +25,7 @@
     <nav class="sticky-top">
       <div class="nav nav-tabs" id="nav-tab" role="tablist">
         <button class="nav-link" id="nav-ed" data-bs-toggle="tab" data-bs-target="#nav-ed" type="button" role="tab" aria-controls="nav-ed">Education</button>
+        <button class="nav-link" id="nav-age" data-bs-toggle="tab" data-bs-target="#nav-age" type="button" role="tab" aria-controls="nav-age">Age earnings profile</button>
         <button class="nav-link" id="nav-sex" data-bs-toggle="tab" data-bs-target="#nav-sex" type="button" role="tab" aria-controls="nav-sex">Gender</button>
         <button class="nav-link" id="nav-race" data-bs-toggle="tab" data-bs-target="#nav-race" type="button" role="tab" aria-controls="nav-race">Race</button>
         <button class="nav-link" id="nav-major" data-bs-toggle="tab" data-bs-target="#nav-major" type="button" role="tab" aria-controls="nav-major">Undergraduate major</button>
