Combine all categories
Color and size changes

--- a/index.html
+++ b/index.html
@@ -25,17 +25,20 @@
     <nav class="sticky-top">
       <div class="nav nav-tabs" id="nav-tab" role="tablist">
         <button class="nav-link" id="nav-ed" data-bs-toggle="tab" data-bs-target="#nav-ed" type="button" role="tab" aria-controls="nav-ed">Education</button>
-        <button class="nav-link" id="nav-age" data-bs-toggle="tab" data-bs-target="#nav-age" type="button" role="tab" aria-controls="nav-age">Age earnings profile</button>
+        <button class="nav-link" id="nav-age" data-bs-toggle="tab" data-bs-target="#nav-age" type="button" role="tab" aria-controls="nav-age">Age</button>
         <button class="nav-link" id="nav-sex" data-bs-toggle="tab" data-bs-target="#nav-sex" type="button" role="tab" aria-controls="nav-sex">Gender</button>
         <button class="nav-link" id="nav-race" data-bs-toggle="tab" data-bs-target="#nav-race" type="button" role="tab" aria-controls="nav-race">Race</button>
         <button class="nav-link" id="nav-major" data-bs-toggle="tab" data-bs-target="#nav-major" type="button" role="tab" aria-controls="nav-major">Undergraduate major</button>
+        <button class="nav-link" id="nav-occ" data-bs-toggle="tab" data-bs-target="#nav-occ" type="button" role="tab" aria-controls="nav-occ">Occupation</button>
+        <button class="nav-link" id="nav-ind" data-bs-toggle="tab" data-bs-target="#nav-ind" type="button" role="tab" aria-controls="nav-ind">Industry</button>
+        <button class="nav-link" id="nav-states" data-bs-toggle="tab" data-bs-target="#nav-states" type="button" role="tab" aria-controls="nav-states">States</button>
       </div>
     </nav>
 
     <div class="row chart">
-      <div class="col-6" id="chart-area-0">
+      <!-- <div class="col-12" id="chart-area-0">
 
-      </div>
+      </div> -->
     </div>
 
 
