--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <script type="text/javascript" src="//code.highcharts.com/highcharts.js"></script>
   <script src="//code.highcharts.com/highcharts-more.js"></script>
   <script src="//code.highcharts.com/modules/accessibility.js"></script>
+  <script src="//code.highcharts.com/modules/exporting.js"></script>
+  <script src="//code.highcharts.com/modules/offline-exporting.js"></script>
+  <script src="//code.highcharts.com/modules/export-data.js"></script>
   <script type="text/javascript" src="collegePayoff-forWeb.js"></script>
   <script type="text/javascript" src="age-forWeb.js"></script>
   <script type="text/javascript" src="cp.js"></script>
